Add Use Validate Code To Signin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
         <item>登录</item>
         <item>注册</item>
     </string-array>
+    <string name="user_tel_wrong">请输入正确的手机号</string>
+
 </resources>
