--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="user_password_check_wrong">确认密码与密码不一致</string>
     <string name="get_validate_code_success">获取验证码成功</string>
     <string name="get_validate_code_fail">获取验证码失败</string>
+    <string name="user_validate_wrong">验证码错误</string>
+    <string name="login_success">登录成功</string>
+    <string name="login_fail">登录失败</string>
+    <string name="signin_success">注册成功</string>
+    <string name="signin_fail">注册失败</string>
 </resources>
