--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,8 @@
     <string name="login_fail">登录失败</string>
     <string name="signin_success">注册成功</string>
     <string name="signin_fail">注册失败</string>
+    <string name="logout">注销</string>
+    <string name="night_model">夜间模式</string>
+    <string name="setting">设置</string>
+    <string name="report">意见反馈</string>
 </resources>
